# mac_to_iphone_ocr_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: get_coordinates.py  mac_to_iphone_ocr_bot.py
