[project]
name = "mac-to-iphone-ocr-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SamuraiHumanGo_Mac", email = "gotechsamurai@samurai-human-go.com" }
]
dependencies = [
    "pyautogui>=0.9.54",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "pynput>=1.8.1",
    "opencv-python>=4.13.0.92",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mac_to_iphone_ocr_bot"]
